        option.  Using it causes a binary image of the package contents
        to be created at INSTALL time and loaded when the library is
        attached.  This saves time, but also uses a more standard way
        of source-ing the package.  Packages that do more than just
        assign object definitions may need to install with `--save'.



BUG FIXES

    o	Unused entry points in `src/appl/fortran.c' and `Fortran.h'
	have been removed.

    o	Unused directory `src/f2clib' and header `src/include/R_ext/f2c.h'
	have been removed.

    o	plot(1:2, xaxs = "i") now gives both "1.0" and "2.0" x-axis labels.

    o	symnum(x) behaves more reasonably for zero length or non-numeric x.

    o   R CMD INSTALL and package.description() fix some common problems
        of DESCRIPTION files (blank lines, ...)

    o	the "coef = 0" fix (PR#917) to boxplot.stats() accidentally broke
	boxplot.stats(do.out = FALSE).

    o   The documentation and parts of the parse/deparse mechanism
    	indicated that there was an operator `%'. Corrected (PR#925).

    o   Fixed some cases where the deparser gave code that threw a
	syntax error when parsed.

    o   The implementation of sys.function() did not work when the
	current function was already a function (e.g., a closure). 


	**************************************************
	*						 *
	*	       1.2 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.2.3

NEW FEATURES

    o	Support for configuration and building the Unix version of R
	under Mac OS X.	 (The `classic' Macintosh port is `Carbonized'
	and also runs under that OS.)

    o	dotchart() and stripchart() become the preferred names for
	dotplot() and stripplot(), respectively.  The old names are now
	deprecated.

    o	Functions in package ctest now consistently use +/-Inf rather
	than NA for one-sided confidence intervals.



BUG FIXES

    o	`Writing R Extensions' incorrectly described an entry point