@@ -420,7 +420,7 @@ static SEXP scanVector(SEXPTYPE type, int maxitems, int maxlines,
 
 
 static SEXP scanFrame(SEXP what, int maxitems, int maxlines, int flush,
-		      int fill, SEXP stripwhite, int blskip)
+		      int fill, SEXP stripwhite, int blskip, int multiline)
 {
     SEXP ans, new, old, w;
     char buffer[MAXELTSIZE];
@@ -523,8 +523,12 @@ static SEXP scanFrame(SEXP what, int maxitems, int maxlines, int flush,
     }
 
  done:
-    if (badline)
-	warning("line %d did not have %d elements", badline, nc);
+    if (badline) {
+	if(multiline)
+	    warning("line %d did not have %d elements", badline, nc);
+	else
+	    error("line %d did not have %d elements", badline, nc);
+    }
 
     if (colsread != 0) {
 	if (!fill) 
@@ -569,7 +573,7 @@ static SEXP scanFrame(SEXP what, int maxitems, int maxlines, int flush,
 SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP ans, file, sep, what, stripwhite, dec, quotes;
-    int i, c, nlines, nmax, nskip, flush, fill, blskip;
+    int i, c, nlines, nmax, nskip, flush, fill, blskip, multiline;
 
     checkArity(op, args);
 
@@ -586,9 +590,11 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
     fill  = asLogical(CAR(args));  args = CDR(args);
     stripwhite = CAR(args);	   args = CDR(args);
     quiet = asLogical(CAR(args));  args = CDR(args);
-    blskip = asLogical(CAR(args));
+    blskip = asLogical(CAR(args)); args = CDR(args);
+    multiline = asLogical(CAR(args));
     if (quiet == NA_LOGICAL)			quiet = 0;
     if (blskip == NA_LOGICAL)			blskip = 1;
+    if (multiline == NA_LOGICAL)		multiline = 1;
     if (nskip < 0 || nskip == NA_INTEGER)	nskip = 0;
     if (nlines < 0 || nlines == NA_INTEGER)	nlines = 0;
     if (nmax < 0 || nmax == NA_INTEGER)		nmax = 0;
@@ -657,7 +663,8 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 	break;
 
     case VECSXP:
-	ans = scanFrame(what, nmax, nlines, flush, fill, stripwhite, blskip);
+	ans = scanFrame(what, nmax, nlines, flush, fill, stripwhite, 
+			blskip, multiline);
 	break;
     default:
 	if (!ttyflag && !wasopen)
